Fix for bug 105452 (Annoying assert when outputing DOM to HTML source). r=cmanske, sr=kin.